test/constCaptureBad1.slq

def foo[τ](x:τ){
    def bar(const __tmp8: !ℝ)qfree{
		x; // error
		__show(typeof(bar));
    }
	return x;
}
